-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.9.6
-
Fix Version/s: 5.11.2
-
Component/s: Widgets: Main Window
-
Labels:None
-
Environment:XCode 7.2.1, MacOS El Capitan SDK (10.11), Qt Creator 4.3.1, Qt 5.9.6
-
Platform/s:
-
Commits:4126de887799c61793bf1f9efc8b7ac7b66c8b32
The first time the app is started up, the application menu has all the usual menu items and the File menu has the actions defined in the MainWindow class. When the application is restarted using the "Restart" action in the File Menu, the File Menu disappears, all its actions appear in the Application Menu and the original actions in the Application menu are no longer available. I observed this behaviour in Qt 5.9.6. It works okay when using Qt 5.6. I have attached sample code and screen shots.
menus.tgz - simple example demonstrating the behaviour described.
FirstTime.png - Screenshot of application menu when the app is first started (built with 5.6 and 5.9.6)
Restarted-Qt5.6.png - Screenshot after the app (built using Qt 5. 6) is restarted using Restart action in File Menu. The native menu bar is fine.
Restarted-Qt5.9.6.png - Screenshot after the app (built using Qt 5.9.6) is restarted using Restart action in File Menu. The File Menu is not visible and all its actions are now in the Application menu. None of the original application menu actions are available.
Does this behaviour have anything to do with making QCocoaMenuLoader a singleton (Change id : Ic4c859d628ab8abd9b469b99c64293582f8e363d in 5.8)?